...
                                        'friendId': friendId,
                                        'eventId': eventId,
                                      },
                                    );
                                  },
                                  child: const Text(
                                    "Show Gifts",
                                    style: TextStyle(color: Colors.purple),
                                  ),
                                ),
                              ],
                            ),
                          ),
...
          ),
          actions: [
            TextButton(
              onPressed: () {
                Navigator.pop(context);
              },
              child: const Text("Close"),
            ),
          ],
        );
      },
    );
  }
...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text("Home"),
        backgroundColor: Colors.purple,
        leading: IconButton(
          icon: const Icon(Icons.arrow_back), // Custom back button
          onPressed: () async {
            // Show a confirmation dialog when back button is pressed
            final shouldLogout = await showDialog<bool>(
...
