...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text("My Pledged Gifts"),
        backgroundColor: Colors.purple,
      ),
      body: pledgedGifts.isEmpty
          ? const Center(
              child: Text(
                "No pledged gifts available.",
...
